Make all page hidden by default to avoid some page overlap effect

--- a/Code/Phone/Apps/FaceTime/Components/CallTab.razor.scss
+++ b/Code/Phone/Apps/FaceTime/Components/CallTab.razor.scss
@@ -5,15 +5,17 @@
     border-radius: 32px;
     transition: all .2s ease-out;
     top: 0;
-    display: flex;
-    margin-top: 0;
+    //display: none;
     position: absolute;
+    opacity: 0;
+    margin-top: 920px;
 
-    &.hidden {
-        margin-top: 920px;
-        //display: none;
+    &.show {
+        opacity: 1;
+        margin-top: 0;
+        //display: flex;
     }
-    
+
     > img {
         width: 100%;
         height: 100%;
