--- a/Code/Phone/Apps/FaceTime/Components/ContactsTab.razor.scss
+++ b/Code/Phone/Apps/FaceTime/Components/ContactsTab.razor.scss
@@ -4,14 +4,14 @@
     //flex-grow: 1;
     flex-direction: column;
     //margin-left: 0;
-    opacity: 1;
-    display: flex;
-    transition: all .2s ease-out;
+    opacity: 0;
+    display: none;
+    //transition: all .2s ease-out;
 
-    &.hidden {
+    &.show {
         //margin-left: 400px;
-        opacity: 0;
-        display: none;
+        opacity: 1;
+        display: flex;
     }
 
     > MessageBar {
