--- a/Code/Phone/Apps/FaceTime/Components/KeypadTab.razor.scss
+++ b/Code/Phone/Apps/FaceTime/Components/KeypadTab.razor.scss
@@ -5,15 +5,17 @@
     //background-color: green;
     //display: none;
     flex-direction: column;
-    transition: all .2s ease-out;
+    opacity: 0;
+    display: none;
+    //transition: all .2s ease-out;
 
-    &.hidden {
-        opacity: 0;
-        display: none;
+    &.show {
+        opacity: 1;
+        display: flex;
 
-        > .keypad {
-            transform: scale(.9);
-        }
+        //> .keypad {
+        //    transform: scale(.9);
+        //}
     }
 
     > .keypad {
